--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -27,12 +27,21 @@
         padding: 8px 36px;
         display: flex;
         justify-content: space-between;
+
+        @media (max-width: 768px) {
+            padding: 0 12px 0 20px;
+
+        }
     }
 
     &__logo {
         max-width: 80px;
         width: 100%;
         transition: opacity .5s ease;
+
+        @media (max-width: 768px) {
+            max-width: 64px;
+        }
     }
 
     &__links {
@@ -46,5 +55,14 @@
 
     .button {
         height: 50px;
+
+
+        @media (max-width: 768px) {
+            font-size: 13px;
+            padding: 8px 11px;
+            height: 40px;
+            letter-spacing: 0;
+
+        }
     }
 }
